--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
+  "name": "thisMovieIsClick",
+  "description": "Fansite for the movie Click starring Adam Sandler",
   "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-seed",
+  "homepage": "https://github.com/Skakerman/thismovieisclick",
   "license": "MIT",
   "private": true,
   "dependencies": {
