--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.1",
+    "browserify-alias-grunt": "^0.1.0",
     "grunt": "^0.4.5",
+    "grunt-browserify": "^4.0.1",
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-uglify": "^0.10.1",
     "http-server": "^0.6.1",
     "jasmine-core": "^2.3.4",
