--- a/bower.json
+++ b/bower.json
@@ -6,13 +6,14 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "~1.4.0",
-    "angular-route": "~1.4.0",
-    "angular-loader": "~1.4.0",
-    "angular-mocks": "~1.4.0",
+    "angular": "~1.5.x",
+    "angular-route": "~1.5.0",
+    "angular-loader": "~1.5.0",
+    "angular-mocks": "~1.5.0",
     "html5-boilerplate": "~5.2.0",
     "angular-animate": "*",
     "angular-bootstrap": "*",
-    "angular-hamburger-toggle": "~0.2.0"
+    "angular-hamburger-toggle": "~0.2.0",
+    "ngFitText": "*"
   }
 }
