--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
     "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-uglify": "^0.10.1",
+    "grunt-contrib-uglify": "^0.11.1",
+    "grunt-ng-annotate": "^1.0.1",
     "http-server": "^0.6.1",
     "jasmine-core": "^2.3.4",
     "karma": "~0.12",
